--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,7 @@
     "test:ci": "CI=true vitest --reporter verbose --run --coverage",
     "genSchemaTypes": "apollo client:codegen --target=typescript --globalTypesFile=src/__generated__/globalTypes.ts --passthroughCustomScalars && prettier --write */**/__generated__/*.ts",
     "extractTranslations": "i18next -c i18next-parser.config.js",
-    "prepare": "(cd .. && ./ui/node_modules/.bin/husky install)"
+    "prepare": "(cd .. && ui\\node_modules\\.bin\\husky install)"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -39,7 +39,7 @@
     "copy-to-clipboard": "^3.3.1",
     "i18next": "^21.8.13",
     "mapbox-gl": "^2.9.1",
-    "postcss": "^8.4.14",
+        "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.1.3",
@@ -51,7 +51,7 @@
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0",
     "react-test-renderer": "^18.2.0",
-    "styled-components": "^5.3.5",
+        "styled-components": "^5.3.5",
     "subscriptions-transport-ws": "^0.11.0",
     "tailwind-override": "^0.6.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
